--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/dashboard.html">dashboard</a>
+        <a href="./pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
         <a href="https://kothapallyvishala.github.io/romi-finance/pages/earn.html">earn</a>
         <a href="/">buy</a>
