--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -31,7 +31,7 @@
           </svg>
         </button>
 
-        <img src="./assets/header/New Logo.png" alt="" />
+        <img src="/assets/header/New Logo.png" alt="" />
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
@@ -47,14 +47,14 @@
       <div class="header__right">
         <button class="header__right__trade btn">Trade</button>
         <button class="header__right__connect-wallet btn">
-          <img src="./assets/header/wallet.svg" alt="wallet" />
+          <img src="/assets/header/wallet.svg" alt="wallet" />
           Connect Wallet
         </button>
         <div class="header__right__options btn">
           <button>
-            <img src="./assets/header/ethereum.svg" alt="ethereum" /></button
+            <img src="/assets/header/ethereum.svg" alt="ethereum" /></button
           ><button>
-            <img src="./assets/header/three-dots-vertical.svg" alt="options" />
+            <img src="/assets/header/three-dots-vertical.svg" alt="options" />
           </button>
         </div>
       </div>
@@ -63,7 +63,7 @@
     <nav id="mobile-navigation">
       <div class="m-nav__header">
         <div class="header__left">
-          <img src="./assets/header/New Logo.png" alt="" />
+          <img src="/assets/header/New Logo.png" alt="" />
           <span>Romi Finance</span>
         </div>
 
@@ -87,9 +87,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="./pages/dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="./pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -102,7 +102,7 @@
         <div class="main-section__header">
           <div class="stats__title">
             <h1>Stats</h1>
-            <img src="./assets/dashboard/stats.svg" alt="" />
+            <img src="/assets/dashboard/stats.svg" alt="" />
           </div>
           <p class="stats__desc">
             Ethereum Total Stats start from 06 Jan 2022.<br />
@@ -164,7 +164,7 @@
         <div class="main-section__header">
           <div class="d-tokens__title">
             <h1>Tokens</h1>
-            <img src="./assets/dashboard/stats.svg" alt="" />
+            <img src="/assets/dashboard/stats.svg" alt="" />
           </div>
           <p class="d-tokens__desc">Platform and $ZLP index tokens.</p>
         </div>
@@ -173,7 +173,7 @@
           <div class="main-section__card">
             <div class="main-section__card__left">
               <div class="main-section__card__header">
-                <img src="./assets/dashboard/d-ZLP.svg" alt="" />
+                <img src="/assets/dashboard/d-ZLP.svg" alt="" />
                 <div>
                   <p>$ROMI</p>
                   <span> $ROMI </span>
@@ -276,7 +276,7 @@
             <div class="main-section__card__left">
               <div class="main-section__card__header">
                 <div class="main-section_card__header__relative-img">
-                  <img src="./assets/dashboard/d-$zlp.png" alt="" />
+                  <img src="/assets/dashboard/d-$zlp.png" alt="" />
              
                   <svg class="main-section_card__header__absolute-img" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 128 128"><linearGradient id="a" x1="11.85" x2="116.15" y1="116.15" y2="11.85" gradientTransform="matrix(1 0 0 -1 0 128)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#6E75B8"/><stop offset="1" stop-color="#495B9D"/></linearGradient><path fill="url(#a)" d="M87.5 128h-47C18.1 128 0 109.9 0 87.5v-47C0 18.1 18.1 0 40.5 0h47C109.9 0 128 18.1 128 40.5v47c0 22.4-18.1 40.5-40.5 40.5z"/><path d="M67.2 89.2v22.7l28.2-39.5zM94.3 65.1l-27.1-45v32.7zM67.2 55.3v28l26.9-15.7zM37.8 65.1l27.1-45v32.7zM64.9 55.3v28L38 67.6zM64.8 89.2v22.7L36.7 72.4z" opacity=".2"/><path fill="#fff" d="M65.2 87.2v22.7l28.2-39.5zM92.3 63.1l-27.1-45v32.7zM65.2 53.3v28l26.9-15.7zM35.8 63.1l27.1-45v32.7zM62.9 53.3v28L36 65.6zM62.8 87.2v22.7L34.7 70.4z"/></svg>
                 </div>
@@ -388,7 +388,7 @@
               $ZLP Index Composition
               <img
                 style="height: 20px"
-                src="./assets/dashboard/d-ZLP.svg"
+                src="/assets/dashboard/d-ZLP.svg"
                 alt="" />
             </p>
 
@@ -405,7 +405,7 @@
               <tbody>
                 <tr>
                   <td class="table-data__img">
-                    <img src="./assets/dashboard/d-etheream.svg" alt="" />
+                    <img src="/assets/dashboard/d-etheream.svg" alt="" />
                     Ethereum
                   </td>
                   <td>$1,796.82</td>
@@ -415,7 +415,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="./assets/dashboard/Bitcoin.svg" alt="" />
+                    <img src="/assets/dashboard/Bitcoin.svg" alt="" />
                     Wrapped Bitcoin
                   </td>
                   <td>$34,706.79</td>
@@ -425,7 +425,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="./assets/dashboard/ApeCoin.svg" alt="" />
+                    <img src="/assets/dashboard/ApeCoin.svg" alt="" />
                     ApeCoin
                   </td>
                   <td>$1.40</td>
@@ -435,7 +435,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="./assets/dashboard/USD_Coin.svg" alt="" />
+                    <img src="/assets/dashboard/USD_Coin.svg" alt="" />
                     USD Coin
                   </td>
                   <td>$1.00</td>
@@ -454,23 +454,23 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="./assets/header/New Logo.png" alt="" />Romi Finance
+        <img src="/assets/header/New Logo.png" alt="" />Romi Finance
       </div>
       <div class="footer__social__links">
         <a class="footer__social__link" href=""
-          ><img src="./assets/footer/twitter.svg" alt=""
+          ><img src="/assets/footer/twitter.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="./assets/footer/medium.svg" alt=""
+          ><img src="/assets/footer/medium.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="./assets/footer/github.svg" alt=""
+          ><img src="/assets/footer/github.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="./assets/footer/romichat.svg" alt=""
+          ><img src="/assets/footer/romichat.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="./assets/footer/discord.svg" alt=""
+          ><img src="/assets/footer/discord.svg" alt=""
         /></a>
       </div>
       <div class="footer__links">
