--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="/">home</a>
         <a href="./pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -86,9 +86,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -184,7 +184,7 @@
         <div class="tokens__bottom">
           <div class="token">
             <div class="token__top">
-              <img src="./assets/home-content/home-romi.png" alt="" />
+              <img src="/assets/home-content/home-romi.png" alt="" />
               $ROMI
             </div>
             <div class="token__desc">
