--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard | Romi Finance</title>
-    <link rel="stylesheet" href="./index.css" />
-    <link rel="stylesheet" href="./pages/dashboard.css" />
-    <link rel="stylesheet" href="./desktop.css" />
-    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="/pages/dashboard.css" />
+    <link rel="stylesheet" href="/desktop.css" />
+    <link rel="stylesheet" href="/reset.css" />
     <script src="../index.js" defer></script>
   </head>
 
@@ -36,9 +36,9 @@
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="./dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="./pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
