--- a/pages/earn.html
+++ b/pages/earn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earn | Romi Finance</title>
     <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="./pages/earn.css" />
+    <link rel="stylesheet" href="/pages/earn.css" />
     <link rel="stylesheet" href="/desktop.css" />
     <link rel="stylesheet" href="/reset.css" />
     <script src="../index.js" defer></script>
@@ -35,9 +35,9 @@
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -86,9 +86,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="https://kothapallyvishala.github.io/romi-finance/pages/earn.html">earn</a>
+        <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
