--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="./pages/dashboard.html">dashboard</a>
+        <a href="/pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
         <a href="/pages/earn.html">earn</a>
         <a href="/">buy</a>
@@ -112,7 +112,7 @@
       <section class="cards">
         <div class="card">
           <img
-            src="/assets/home_top/home-trading-vol.svg"
+            src="assets/home_top/home-trading-vol.svg"
             alt="Trading_Volume" />
           <div>
             <div class="card__title">Total Trading Volume</div>
