--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
           </div>
         </div>
         <div class="card">
-          <img src="/assets/home_top/home-intrest.svg" alt="Trading_Volume" />
+          <img src="assets/home_top/home-intrest.svg" alt="Trading_Volume" />
           <div>
             <div class="card__title">Open Interest</div>
             <div class="card__price">$0</div>
           </div>
         </div>
         <div class="card">
-          <img src="/assets/home_top/home-users.svg" alt="Trading_Volume" />
+          <img src="assets/home_top/home-users.svg" alt="Trading_Volume" />
           <div>
             <div class="card__title">Total Users</div>
             <div class="card__price">0</div>
@@ -142,7 +142,7 @@
           <div class="feature__top">
             <img
               class="feature__icon"
-              src="/assets/home-content/liquidation.svg"
+              src="assets/home-content/liquidation.svg"
               alt="Reduce_Liquidation_Risks" />
             <div class="feature__title">Reduce Liquidation Risks</div>
           </div>
@@ -155,7 +155,7 @@
           <div class="feature__top">
             <img
               class="feature__icon"
-              src="/assets/home-content/home-cost.svg"
+              src="assets/home-content/home-cost.svg"
               alt="Reduce_Liquidation_Risks" />
             <div class="feature__title">Save on Costs</div>
           </div>
@@ -168,7 +168,7 @@
           <div class="feature__top">
             <img
               class="feature__icon"
-              src="/assets/home-content/home-swap.svg"
+              src="assets/home-content/home-swap.svg"
               alt="Reduce_Liquidation_Risks" />
             <div class="feature__title">Simple Swaps</div>
           </div>
@@ -184,7 +184,7 @@
         <div class="tokens__bottom">
           <div class="token">
             <div class="token__top">
-              <img src="/assets/home-content/home-romi.png" alt="" />
+              <img src="assets/home-content/home-romi.png" alt="" />
               $ROMI
             </div>
             <div class="token__desc">
@@ -200,7 +200,7 @@
 
           <div class="token">
             <div class="token__top">
-              <img src="/assets/home-content/home-zlp.png" alt="" />
+              <img src="assets/home-content/home-zlp.png" alt="" />
               $ZLP
             </div>
             <div class="token__desc">
@@ -221,23 +221,23 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="/assets/header/New Logo.png" alt="" />Romi Finance
+        <img src="assets/header/New Logo.png" alt="" />Romi Finance
       </div>
       <div class="footer__social__links">
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/twitter.svg" alt=""
+          ><img src="assets/footer/twitter.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/medium.svg" alt=""
+          ><img src="assets/footer/medium.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/github.svg" alt=""
+          ><img src="assets/footer/github.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/romichat.svg" alt=""
+          ><img src="assets/footer/romichat.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/discord.svg" alt=""
+          ><img src="assets/footer/discord.svg" alt=""
         /></a>
       </div>
       <div class="footer__links">
