--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
           </svg>
         </button>
 
-        <img src="/assets/header/New Logo.png" alt="" />
+        <img src="assets/header/New Logo.png" alt="" />
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="/pages/dashboard.html">dashboard</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="/pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -46,14 +46,14 @@
       <div class="header__right">
         <button class="header__right__trade btn">Trade</button>
         <button class="header__right__connect-wallet btn">
-          <img src="/assets/header/wallet.svg" alt="wallet" />
+          <img src="assets/header/wallet.svg" alt="wallet" />
           Connect Wallet
         </button>
         <div class="header__right__options btn">
           <button>
-            <img src="/assets/header/ethereum.svg" alt="ethereum" /></button
+            <img src="assets/header/ethereum.svg" alt="ethereum" /></button
           ><button>
-            <img src="/assets/header/three-dots-vertical.svg" alt="options" />
+            <img src="assets/header/three-dots-vertical.svg" alt="options" />
           </button>
         </div>
       </div>
@@ -62,7 +62,7 @@
     <nav id="mobile-navigation">
       <div class="m-nav__header">
         <div class="header__left">
-          <img src="/assets/header/New Logo.png" alt="" />
+          <img src="assets/header/New Logo.png" alt="" />
           <span>Romi Finance</span>
         </div>
 
@@ -86,9 +86,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="/pages/dashboard.html">dashboard</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="/pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
