--- a/pages/earn.html
+++ b/pages/earn.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earn | Romi Finance</title>
-    <link rel="stylesheet" href="/index.css" />
-    <link rel="stylesheet" href="/pages/earn.css" />
-    <link rel="stylesheet" href="/desktop.css" />
-    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="pages/earn.css" />
+    <link rel="stylesheet" href="desktop.css" />
+    <link rel="stylesheet" href="reset.css" />
     <script src="../index.js" defer></script>
   </head>
   <body>
@@ -30,14 +30,14 @@
           </svg>
         </button>
 
-        <img src="/assets/header/New Logo.png" alt="" />
+        <img src="assets/header/New Logo.png" alt="" />
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="/pages/dashboard.html">dashboard</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="/pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -51,9 +51,9 @@
         </button>
         <div class="header__right__options btn">
           <button>
-            <img src="/assets/header/ethereum.svg" alt="ethereum" /></button
+            <img src="assets/header/ethereum.svg" alt="ethereum" /></button
           ><button>
-            <img src="/assets/header/three-dots-vertical.svg" alt="options" />
+            <img src="assets/header/three-dots-vertical.svg" alt="options" />
           </button>
         </div>
       </div>
@@ -62,7 +62,7 @@
     <nav id="mobile-navigation">
       <div class="m-nav__header">
         <div class="header__left">
-          <img src="/assets/header/New Logo.png" alt="" />
+          <img src="assets/header/New Logo.png" alt="" />
           <span>Romi Finance</span>
         </div>
 
@@ -86,9 +86,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="/pages/dashboard.html">dashboard</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="/pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -369,23 +369,23 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="/assets/header/New Logo.png" alt="" />Romi Finance
+        <img src="assets/header/New Logo.png" alt="" />Romi Finance
       </div>
       <div class="footer__social__links">
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/twitter.svg" alt=""
+          ><img src="assets/footer/twitter.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/medium.svg" alt=""
+          ><img src="assets/footer/medium.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/github.svg" alt=""
+          ><img src="assets/footer/github.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/romichat.svg" alt=""
+          ><img src="assets/footer/romichat.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="/assets/footer/discord.svg" alt=""
+          ><img src="assets/footer/discord.svg" alt=""
         /></a>
       </div>
       <div class="footer__links">
