--- a/pages/earn.html
+++ b/pages/earn.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earn | Romi Finance</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="earn.css" />
+    <link rel="stylesheet" href="/pages/earn.css" />
     <link rel="stylesheet" href="desktop.css" />
     <link rel="stylesheet" href="reset.css" />
     <script src="../index.js" defer></script>
