--- a/pages/earn.html
+++ b/pages/earn.html
@@ -35,9 +35,9 @@
       </div>
       <nav class="header__center">
         <a href="/">home</a>
-        <a href="pages/dashboard.html">dashboard</a>
+        <a href="../pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="pages/earn.html">earn</a>
+        <a href="../pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -86,9 +86,9 @@
 
       <div class="m-nav__links">
         <a href="/">home</a>
-        <a href="pages/dashboard.html">dashboard</a>
+        <a href="../pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="pages/earn.html">earn</a>
+        <a href="../pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
