--- a/pages/earn.html
+++ b/pages/earn.html
@@ -30,7 +30,7 @@
           </svg>
         </button>
 
-        <img src="assets/header/New Logo.png" alt="" />
+        <img src="../assets/header/New Logo.png" alt="" />
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
