--- a/pages/earn.html
+++ b/pages/earn.html
@@ -46,14 +46,14 @@
       <div class="header__right">
         <button class="header__right__trade btn">Trade</button>
         <button class="header__right__connect-wallet btn">
-          <img src="/assets/header/wallet.svg" alt="wallet" />
+          <img src="../assets/header/wallet.svg" alt="wallet" />
           Connect Wallet
         </button>
         <div class="header__right__options btn">
           <button>
-            <img src="assets/header/ethereum.svg" alt="ethereum" /></button
+            <img src="../assets/header/ethereum.svg" alt="ethereum" /></button
           ><button>
-            <img src="assets/header/three-dots-vertical.svg" alt="options" />
+            <img src="../assets/header/three-dots-vertical.svg" alt="options" />
           </button>
         </div>
       </div>
@@ -62,7 +62,7 @@
     <nav id="mobile-navigation">
       <div class="m-nav__header">
         <div class="header__left">
-          <img src="assets/header/New Logo.png" alt="" />
+          <img src="../assets/header/New Logo.png" alt="" />
           <span>Romi Finance</span>
         </div>
 
@@ -369,23 +369,23 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="assets/header/New Logo.png" alt="" />Romi Finance
+        <img src="../assets/header/New Logo.png" alt="" />Romi Finance
       </div>
       <div class="footer__social__links">
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/twitter.svg" alt=""
+          ><img src="../assets/footer/twitter.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/medium.svg" alt=""
+          ><img src="../assets/footer/medium.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/github.svg" alt=""
+          ><img src="../assets/footer/github.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/romichat.svg" alt=""
+          ><img src="../assets/footer/romichat.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/discord.svg" alt=""
+          ><img src="../assets/footer/discord.svg" alt=""
         /></a>
       </div>
       <div class="footer__links">
