--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -164,7 +164,7 @@
         <div class="main-section__header">
           <div class="d-tokens__title">
             <h1>Tokens</h1>
-            <img src="assets/dashboard/stats.svg" alt="" />
+            <img src="../assets/dashboard/stats.svg" alt="" />
           </div>
           <p class="d-tokens__desc">Platform and $ZLP index tokens.</p>
         </div>
@@ -173,7 +173,7 @@
           <div class="main-section__card">
             <div class="main-section__card__left">
               <div class="main-section__card__header">
-                <img src="assets/dashboard/d-ZLP.svg" alt="" />
+                <img src="../assets/dashboard/d-ZLP.svg" alt="" />
                 <div>
                   <p>$ROMI</p>
                   <span> $ROMI </span>
@@ -388,7 +388,7 @@
               $ZLP Index Composition
               <img
                 style="height: 20px"
-                src="assets/dashboard/d-ZLP.svg"
+                src="../assets/dashboard/d-ZLP.svg"
                 alt="" />
             </p>
 
@@ -405,7 +405,7 @@
               <tbody>
                 <tr>
                   <td class="table-data__img">
-                    <img src="assets/dashboard/d-etheream.svg" alt="" />
+                    <img src="../assets/dashboard/d-etheream.svg" alt="" />
                     Ethereum
                   </td>
                   <td>$1,796.82</td>
@@ -415,7 +415,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="assets/dashboard/Bitcoin.svg" alt="" />
+                    <img src="../assets/dashboard/Bitcoin.svg" alt="" />
                     Wrapped Bitcoin
                   </td>
                   <td>$34,706.79</td>
@@ -425,7 +425,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="assets/dashboard/ApeCoin.svg" alt="" />
+                    <img src="../assets/dashboard/ApeCoin.svg" alt="" />
                     ApeCoin
                   </td>
                   <td>$1.40</td>
@@ -435,7 +435,7 @@
                 </tr>
                 <tr>
                   <td class="table-data__img">
-                    <img src="assets/dashboard/USD_Coin.svg" alt="" />
+                    <img src="../assets/dashboard/USD_Coin.svg" alt="" />
                     USD Coin
                   </td>
                   <td>$1.00</td>
@@ -454,23 +454,23 @@
 
     <footer class="footer">
       <div class="footer__logo">
-        <img src="assets/header/New Logo.png" alt="" />Romi Finance
+        <img src="../assets/header/New Logo.png" alt="" />Romi Finance
       </div>
       <div class="footer__social__links">
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/twitter.svg" alt=""
+          ><img src="../assets/footer/twitter.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/medium.svg" alt=""
+          ><img src="../assets/footer/medium.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/github.svg" alt=""
+          ><img src="../assets/footer/github.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/romichat.svg" alt=""
+          ><img src="../assets/footer/romichat.svg" alt=""
         /></a>
         <a class="footer__social__link" href=""
-          ><img src="assets/footer/discord.svg" alt=""
+          ><img src="../assets/footer/discord.svg" alt=""
         /></a>
       </div>
       <div class="footer__links">
