--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -47,14 +47,14 @@
       <div class="header__right">
         <button class="header__right__trade btn">Trade</button>
         <button class="header__right__connect-wallet btn">
-          <img src="assets/header/wallet.svg" alt="wallet" />
+          <img src="../assets/header/wallet.svg" alt="wallet" />
           Connect Wallet
         </button>
         <div class="header__right__options btn">
           <button>
-            <img src="assets/header/ethereum.svg" alt="ethereum" /></button
+            <img src="../assets/header/ethereum.svg" alt="ethereum" /></button
           ><button>
-            <img src="assets/header/three-dots-vertical.svg" alt="options" />
+            <img src="../assets/header/three-dots-vertical.svg" alt="options" />
           </button>
         </div>
       </div>
@@ -63,7 +63,7 @@
     <nav id="mobile-navigation">
       <div class="m-nav__header">
         <div class="header__left">
-          <img src="assets/header/New Logo.png" alt="" />
+          <img src="../assets/header/New Logo.png" alt="" />
           <span>Romi Finance</span>
         </div>
 
@@ -102,7 +102,7 @@
         <div class="main-section__header">
           <div class="stats__title">
             <h1>Stats</h1>
-            <img src="assets/dashboard/stats.svg" alt="" />
+            <img src="../assets/dashboard/stats.svg" alt="" />
           </div>
           <p class="stats__desc">
             Ethereum Total Stats start from 06 Jan 2022.<br />
