--- a/pages/earn.html
+++ b/pages/earn.html
@@ -34,7 +34,7 @@
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
-        <a href="/">home</a>
+        <a href="../index.html">home</a>
         <a href="../pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
         <a href="../pages/earn.html">earn</a>
