--- a/pages/earn.html
+++ b/pages/earn.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="m-nav__links">
-        <a href="/">home</a>
+        <a href="../index.html">home</a>
         <a href="../pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
         <a href="../pages/earn.html">earn</a>
