--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <span>Romi Finance</span>
       </div>
       <nav class="header__center">
-        <a href="../index.html">home</a>
-        <a href="../pages/dashboard.html">dashboard</a>
+        <a href="index.html">home</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="../pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
@@ -85,10 +85,10 @@
       </div>
 
       <div class="m-nav__links">
-        <a href="../index.html">home</a>
-        <a href="../pages/dashboard.html">dashboard</a>
+        <a href="index.html">home</a>
+        <a href="pages/dashboard.html">dashboard</a>
         <a href="/">NFT</a>
-        <a href="../pages/earn.html">earn</a>
+        <a href="pages/earn.html">earn</a>
         <a href="/">buy</a>
         <a href="/">referrals</a>
         <a href="/">ecosystem</a>
